@@ -1,3 +1,12 @@
+2008-09-19  Christian Franke  <franke@computer.org>
+
+	* aclocal.m4 (grub_CHECK_ENABLE_EXECUTE_STACK): New function.
+	* configure.ac: Call grub_CHECK_ENABLE_EXECUTE_STACK.
+	* include/grub/misc.h [NEED_ENABLE_EXECUTE_STACK]:
+	Export __enable_execute_stack() to modules.
+	* kern/misc.c [NEED_ENABLE_EXECUTE_STACK] (__enable_execute_stack):
+	New function.
+
 2008-09-09  Felix Zielcke  <fzielcke@z-51.de>
 
 	* Makefile.in (RMKFILES): Add `i386.rmk' and `x86_64-efi.rmk'.
